fixed lock contentionm